Adding default values for params in LearnToRankConfig